# Dybbuk

./: .gitignore  DIBBUK301.xml  MASTERPLAN.md  README.md
DybbukXMLeditions/: A-Earliest1898-2023-1-22.xml  A-Earliest1898.xml  Abridged1905-2022-12-03.xml  Abridged1905-2022-12-11.xml  Abridged1905-2022-12-18b.xml  Abridged1905-2022-12-19.xml  Abridged1905-2023-1-1.xml  B-Abridged1905.xml  C-Expanded-2023-1-16.xml  DIBBUK110.xml  DIBBUK111.xml  DIBBUK111SceneExp.xml  DIBBUK112.xml  DIBBUK115.xml  DIBBUK116.xml  DIBBUK119.xml  DIBBUK120.xml  DIBBUK204.xml  DIBBUK206.xml  DIBBUK209.xml  DIBBUK211.xml  DIBBUK215.xml  DIBBUK302.xml  DIBBUK305.xml  DIBBUK307.xml  DIBBUK308.xml  DIBBUK401.xml  DIBBUK403.xml  DIBBUK405.xml  DIBBUK406.xml  DIBBUK407.xml  (+39 more)
Zylbercweig/zibn-shtern/: .gitignore  README.md  pyproject.toml
Zylbercweig/zibn-shtern/configs/: audit_rules.yaml  kimatch.example.yaml
Zylbercweig/zibn-shtern/data/raw/: Zylbercweig-Extraction2026-02-05-places.tsv  Zylbercweig-Extraction2026-02-05cemeteries-tsv.xlsx
Zylbercweig/zibn-shtern/data/working/: openrefine_review_queue.tsv
Zylbercweig/zibn-shtern/docs/: data_dictionary.md  workflow.md
Zylbercweig/zibn-shtern/scripts/: audit_places.py  auto_reclassify.py  build_review_queue.py  export_kimatch_input.py  export_review_for_openrefine.py  merge_cemeteries.py  triage_qids.py
Zylbercweig/zibn-shtern/src/zibn_shtern/: __init__.py  audit.py  corrections.py  io.py  kimatch_bridge.py  reviewer_adapter.py  triage.py  wikidata_client.py
Zylbercweig/zibn-shtern/tests/: test_corrections.py  test_unified_legacy_parity.py
(+118 files in other folders)
